--- a/Monopoly/Styles/CardTemplates.xaml
+++ b/Monopoly/Styles/CardTemplates.xaml
@@ -61,18 +61,18 @@
                             <Setter Property="Foreground" Value="Black"/>
                         </Style>
                     </Grid.Resources>
-                    
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="0" Grid.Column="0"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="1" Grid.Column="0"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="1" Grid.Column="1"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="2" Grid.Column="0"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="2" Grid.Column="1"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="2" Grid.Column="2"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="3" Grid.Column="0"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="3" Grid.Column="1"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="3" Grid.Column="2"/>
-                    <iconPacks:PackIconMaterial Kind="Home" Grid.Row="3" Grid.Column="3"/>
-                    <iconPacks:PackIconMaterial Kind="HospitalBuilding" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
+
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="0" Grid.Column="0"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="0"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="1"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="0"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="1"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="2"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="0"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="1"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="2"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="3"/>
+                    <iconPacks:PackIconFontAwesome Kind="BuildingRegular" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
 
                     <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="0" Grid.Column="4">
                         <TextBlock.Text >
